# universal-compute

./: .gitignore  .gitmodules  Makefile  README.md  TODO.md  bridge.zig  build.zig  justfile  test.zig  universal-compute.h
bridge/: main.zig
compiler/: Cargo.toml
compiler/src/: lib.rs
example/: kernel.zig  main.c  main.zig  program.c
include/: context.h  device.h  error.h  extern_opaque.h  uc_buffer.h  uc_context.h  uc_device.h  uc_error.h  uc_event.h  uc_extern_sizes.h  uc_program.h  uc_utils.h  universal-compute.h  utils.h
src/: backend.zig  buffer.zig  context.zig  device.zig  error.zig  event.zig  features.zig  libs.zig  main.zig  program.zig  utils.zig
src/backend/: host.zig  opencl.zig  webgpu.zig
src/buffer/: host.zig  opencl.zig
src/context/: host.zig  opencl.zig
src/device/: host.zig  opencl.zig
src/event/: host.zig  opencl.zig
src/program/: host.zig  opencl.zig
